<resources>
    <string name="app_name">농구박사</string>
    <string name="topbar1">공지사항1</string>
    <string name="topbar2">공지사항2</string>
    <string name="topbar3">공지사항3</string>
    <string name="banner_ad_unit_id1">ca-app-pub-2853131389378363/5335626355</string>
    <string name="banner_ad_unit_id2">ca-app-pub-2853131389378363/2247134406</string>
    <string name="middetail1">업체정보</string>
    <string name="middetail2">강사정보</string>
    <string name="detailmenu1">text1</string>
    <string name="detailmenu2">text2</string>
    <string name="detailmenu3">text3</string>
    <string name="detailmenu4">text4</string>
    <string name="detailmenu5">text5</string>
    <string name="insertimage">이미지 넣기</string>
    <string name="techerInfo">강사 정보</string>
    <string name="bottombar1">홈</string>
    <string name="bottombar2">공지</string>
    <string name="bottombar3">문의/건의</string>
    <string name="bottombar4">My Page</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="spinner">분류</string>
    <string name="find">찾기</string>
    <string name="write">글쓰기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="up">Up</string>
    <string name="superup">Super Up</string>
    <string name="editpost">수정</string>
    <string name="deletepost">삭제</string>
    <string name="info">문의</string>
    <string name="infocontents">불편한 사항, 개선안 건의 등 문의할 내용을 적어주시면 빠른 시간 안에 메일로 답변을 드리겠습니다. \n(로그인을 안하신 경우에는 답변을 받으시려면 이메일을 꼭 적어주세요)</string>
    <string name="comment">댓글</string>
    <string name="input">등록</string>
    <string name="reportText">신고</string>
    <string name="reportTv">신고내용</string>
    <string name="hyperLink">자세히 보기</string>
    <string name="confirm">확인</string>
    <string name="movepost">보기</string>
    <string name="cid">688533934226-c7vhkr61cp1osjmhcd2p22oq8njk3b0n.apps.googleusercontent.com</string>
    <string name="noticewrite">공지쓰기</string>
    <string name="commonnotice">일반공지</string>
    <string name="topnotice">상단공지</string>

</resources>
