<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="10dp"
    tools:context="addup.fpcompany.com.addsup.NoticeInsertActivity">


    <LinearLayout
        android:id="@+id/radioG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/commonNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commonnotice"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/topNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topnotice"
                android:textSize="16sp"/>
        </RadioGroup>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioG">

        <TextView
            android:id="@+id/mainTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainTv"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:minHeight="40dp" />

        <TextView
            android:id="@+id/contentsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleEt"
            android:layout_marginTop="20dp"
            android:text="@string/contents"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/contentsEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contentsTv"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:minHeight="300dp" />

    </RelativeLayout>


    <Button
        android:id="@+id/insertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/noticewrite" />

</RelativeLayout>
