<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="addup.fpcompany.com.addsup.myPageOption">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/upBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:text="@string/up"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/superUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:paddingTop="20dp"
                android:text="@string/superup"
                android:textSize="16sp" />
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movepost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:text="@string/movepost"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editpost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:text="@string/editpost"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/delpost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/deletepost"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
