<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="addup.fpcompany.com.addsup.insertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/blueback"
            android:gravity="center_vertical"
            android:padding="0dp">

            <TextView
                android:id="@+id/button_main_insert"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="@string/write"
                android:textColor="#fff" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:id="@+id/spinTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/spinner" />

            <Spinner
                android:id="@+id/insspinner1"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/spinTv" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="13dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/imgFind"
                android:gravity="center_vertical"
                android:text="@string/insertimage"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/imgFind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/imagefind" />
        </RelativeLayout>

        <HorizontalScrollView
            android:id="@+id/horScrollView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imView1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView5"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView6"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView7"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView8"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView9"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imView10"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="1dp"
                android:text="@string/title" />

            <EditText
                android:id="@+id/titleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/contentsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="1dp"
                android:text="@string/contents" />

            <EditText
                android:id="@+id/contentsET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:minHeight="200dp"
                android:padding="5dp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
